metrics/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: victoria-metrics-grafana
  namespace: metrics-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dash.valentinus.dev`)
      priority: 10
      services:
        - kind: Service
          name: victoria-metrics-grafana
          namespace: metrics-k8s
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    domains:
      - main: dash.valentinus.dev
    secretName: wildcard-valentinus.dev-tls
